--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing
+  source_URL: https://drive.google.com/file/d/1wX1NGvUfyl8k-_Bh5xF4NBvdv5H53Qaq/view?usp=sharing
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
@@ -14,5 +14,9 @@ prepare_base_model:
   
 
 training:
-  root_dir: artifacts/training
+  root_dir: artifacts\data_ingestion\Data-CS-DVC\training_data
+  Med_train: artifacts\data_ingestion\Data-CS-DVC\training_data\Med_train
+  Cover_train: artifacts\data_ingestion\Data-CS-DVC\training_data\Cover_train
+  Med_val: artifacts\data_ingestion\Data-CS-DVC\validation_data\Med_val
+  Cover_val: artifacts\data_ingestion\Data-CS-DVC\validation_data\Cover_val
   trained_model_path: artifacts/training/model.h5
