--- a/config/config.yaml
+++ b/config/config.yaml
@@ -22,6 +22,6 @@ training:
 
 model_split:
   root_dir: artifacts/split_model
-  trained_model_path: artifacts/training/model.h5
+  trained_model_path: artifacts/training/model.hdf5
   hiding_model_path: artifacts/split_model/hiding.h5
   reveal_model_path: artifacts/split_model/reveal.h5
